# agui_demo

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/: app.py  graph.py
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend-vanilla/: README.md  index.html  package-lock.json  package.json
frontend-vanilla/src/: main.js  styles.css
frontend/src/: App.jsx  main.jsx
frontend/src/Chat/: ChatInterface.jsx  ChatInterface.module.css
